# CanIChess

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: cmake-macos.yml  cmake-ubuntu.yml  cmake-windows.yml  cmake.yml
CanIChess/: CMakeLists.txt  CanIChess.cpp  CanIChess.h
src/: CMakeLists.txt  imconfig.h  main.cpp
src/base/: base.cpp  config.h  cordinate.cpp  cordinate.h  result.h
src/chess_engine/: CMakeLists.txt  CmakeLists.txt  chess_board.cc  chess_board.h  chess_board_listener.h  chess_piece.cpp  chess_piece.h  chess_piece_factory.cpp  chess_tritmap.h  tile_state.h
src/chess_engine/base/: chess_move.h  cordinate.h
src/chess_engine/pieces/: bishop.cc  bishop.h  directional_move_handler.cpp  directional_move_handler.h  empty.cc  empty.h  king.cc  king.h  knight.cc  knight.h  pawn.cc  pawn.h  queen.cc  queen.h  rook.cc  rook.h  utils.cpp  utils.h
src/game/: abstract_game_component.h  assets.h  game_controller.h
src/renderer/: CMakeLists.txt  imgui_utils.cpp  renderer_config.h  renderer_factory.cpp
src/renderer/api/: event.h  imgui_utils.h  sprite.h  texure_manager.h  window.h  wrapper.h
src/renderer/backend/sfml/: sfml_sprite.cpp  sfml_sprite.h  sfml_texture_manager.cpp  sfml_texture_manager.h  sfml_window.cpp  sfml_window.h
test/: CMakeLists.txt  chess_engine_tests.cpp  chess_piece_tests.cpp  directional_move_handler_tests.cpp
